# top-asteroids-challenge

./: .gitignore  README.md  run.sh
Bots/cpp/vkdrone1/: CMakeLists.txt  README
Bots/cpp/vkdrone1/src/: BotBase.cpp  BotBase.h  Makefile  Makefile.vkd  PID.h  VKDrone.cpp  VKDrone.h  bot_interface.cpp  bot_interface.h  session.vim
Bots/cpp/vkdrone2/: README  README.md
Bots/cpp/vkdrone2/src/: PID.cpp  VKDrone.cpp  VKDrone.h  bot_interface.h  main.cpp
Bots/cpp/vkdrone3/: CMakeLists.txt  README.md
Bots/cpp/vkdrone3/src/: Makefile  Point2D.h  VKDrone.cpp  VKDrone.h
